--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "react-scripts": "1.1.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3000 concurrently \"react-scripts start\" \"npm run rest\"",
+    "rest": "json-server --port 3050 --watch db.json",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "concurrently": "4.0.1",
+    "json-server": "0.14.0"
   }
 }
