--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "license": "apache-2.0",
   "dependencies": {
+    "lodash": "4.17.10",
+    "prop-types": "15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.5"
+    "react-redux": "5.0.7",
+    "react-scripts": "1.1.5",
+    "redux": "4.0.0",
+    "redux-thunk": "2.3.0"
   },
   "scripts": {
     "start": "PORT=3000 concurrently \"react-scripts start\" \"npm run rest\"",
@@ -17,6 +22,7 @@
   },
   "devDependencies": {
     "concurrently": "4.0.1",
-    "json-server": "0.14.0"
+    "json-server": "0.14.0",
+    "redux-devtools-extension": "2.13.5"
   }
 }
